test/badMeasurement2.slq

def meas[τ](x: τ):!τ⇒measure(x);
def main()mfree⇒meas(H(0)); // error
